services and product

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <a href="./index.html" class="logo">New Year</a>
   <nav class="navbar">
    <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Product</a></li>
-    <li><a href="#">Services</a></li>
+    <li><a href="#top">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#product">Product</a></li>
+    <li><a href="#services">Services</a></li>
     <li><a href="#">Gallery</a></li>
     <li><a href="#">Contact</a></li>
     <li><a href="#">Blog</a></li>
@@ -51,11 +51,175 @@
  <div class="text">
    <h5>why choose us?</h5>
    <h2>Celebrate your christmas with us</h2>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut reiciendis quia repellendus sequi quis culpa alias, sapiente nobis earum fugiat tenetur ullam maxime architecto iure! Nemo rerum et dolore nesciunt beatae, sequi explicabo ab, vero maxime ad delectus pariatur ipsum reiciendis sunt unde repudiandae dolor natus, expedita non consequuntur placeat? Iusto dolorem impedit nihil eaque itaque, autem recusandae tempora deserunt dolore. Quaerat voluptate quae non similique dolorum necessitatibus eum? Nam!</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut reiciendis quia repellendus sequi quis culpa alias, sapiente nobis earum fugiat tenetur ullam maxime architecto iure! Nemo rerum et dolore nesciunt beatae, sequi explicabo ab, vero maxime ad delectus pariatur ipsum </p>
+   <a href="#" class="btn"><span>Read More</span></a>
  </div>
  </section>
  <section id="product" class="product">
-   <h2>our product</h2>
+   <h2>our <span>product</span></h2>
+   <div class="product-container">
+     <div class="box">
+     <div class="img">
+         <img src="./img/toy1.png" alt="">
+         <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-search"></a>
+         </div>
+     </div>
+       <div class="content">
+         <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+         </div>
+         <h3>Holiday discount</h3>
+        <div class="price">$20.6 <span>$32.6</span></div>
+       </div>
+     </div>
+      <div class="box">
+        <div class="img">
+          <img src="./img/product-1.png" alt="">
+          <div class="icons">
+            <a href="#" class="fas fa-shopping-cart"></a>
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+        <div class="content">
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+          <h3>Holiday discount</h3>
+          <div class="price">$20.6 <span>$32.6</span></div>
+        </div>
+      </div>
+        <div class="box">
+          <div class="img">
+            <img src="./img/toy2.png" alt="">
+            <div class="icons">
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-search"></a>
+            </div>
+          </div>
+          <div class="content">
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <h3>Holiday discount</h3>
+            <div class="price">$20.6 <span>$32.6</span></div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img">
+            <img src="./img/product-3.png" alt="">
+            <div class="icons">
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-search"></a>
+            </div>
+          </div>
+          <div class="content">
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <h3>Holiday discount</h3>
+            <div class="price">$20.6 <span>$32.6</span></div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img">
+            <img src="./img/product-4.png" alt="">
+            <div class="icons">
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-search"></a>
+            </div>
+          </div>
+          <div class="content">
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <h3>Holiday discount</h3>
+            <div class="price">$20.6 <span>$32.6</span></div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img">
+            <img src="./img/product-6.png" alt="">
+            <div class="icons">
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-search"></a>
+            </div>
+          </div>
+          <div class="content">
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <h3>Holiday discount</h3>
+            <div class="price">$20.6 <span>$32.6</span></div>
+          </div>
+        </div>
+   </div>
+ </section>
+ <section id="services" class="services">
+   <h2>Our <span>services</span></h2>
+   <div class="container-services">
+     <div class="box">
+        <i class="fas fa-tree"></i>
+        <h3>christmas tree</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, doloribus!</p>
+     </div>
+    <div class="box">
+        <i class="fas fa-snowman"></i>
+        <h3>christmas snowman</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, doloribus!</p>
+    </div>
+    <div class="box">
+      <i class="fas fa-cookie"></i>
+      <h3>christmas cookies</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, doloribus!</p>
+    </div>
+    <div class="box">
+    <i class="fas fa-candy-cane"></i>
+    <h3>christmas candy</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, doloribus!</p>
+    </div>
+    <div class="box">
+        <i class="fas fa-gifts"></i>
+        <h3>christmas gifts</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, doloribus!</p>
+    </div>
+    <div class="box">
+      <i class="fas fa-sleigh"></i>
+      <h3>christmas sleigh</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, doloribus!</p>
+    </div>
+   </div>
  </section>
  <script src="./js/main.js"></script>
 </body>
