--- a/index.html
+++ b/index.html
@@ -221,6 +221,149 @@
     </div>
    </div>
  </section>
+ <section class="gallery" id="gallery">
+   <h2>Our <span>gallery</span></h2>
+    <div class="gallery-container">
+      <div class="topbar">
+        <span class="back" id="close">&larr;</span>
+      </div>
+      <ul class="tp-grid" id="tp-grid">
+        <li data-pile="christmas tree">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-1.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="christmas tree">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-2.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="christmas tree">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-3.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="christmas tree">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-4.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="christmas gift">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-5.jpg" alt="">
+          </a>
+        </li>
+      
+        <li data-pile="christmas gift">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-6.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="christmas gift">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-7.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="christmas gift">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-8.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="holliday city">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-9.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="holliday city">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-10.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="holliday city">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-11.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="holliday city">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-12.jpg" alt="">
+          </a>
+        </li>
+     
+        <li data-pile="our customers">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-13.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="our customers">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-14.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="our customers">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-15.jpg" alt="">
+          </a>
+        </li>
+        <li data-pile="our customers">
+          <a href="#">
+            <span class="tp-info">
+              <span>Lorem</span>
+            </span>
+            <img src="img/gallery-img-16.jpg" alt="">
+          </a>
+        </li>
+      </ul>
+      </div>
+ </section>
+ <script src="./js/modernizr.custom.63321.js"></script>
+ <script src="./js/jquery-3.6.0.js"></script>
+ <script src="./js/jquery.stapel.js"></script>
  <script src="./js/main.js"></script>
 </body>
 </html>
