--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       <h2>our <span>blog</span></h2>
       <div class="blogs-container">
         <div class="box " data-aos="fade-up" data-aos-delay="550"
-        data-aos-offset="700">
+        >
           <div class="blog-img">
             <img src="./img/blog-post1.jpg" alt="" />
           </div>
@@ -384,7 +384,7 @@
           </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="800"
-         data-aos-offset="700">
+         >
           <div class="blog-img">
             <img src="./img/blog-post2.jpg" alt="" />
           </div>
@@ -402,7 +402,7 @@
           </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="1050"
-         data-aos-offset="700">
+        >
           <div class="blog-img">
             <img src="./img/blog-post3.jpg" alt="" />
           </div>
@@ -475,19 +475,19 @@
     </section>
     <section class="contact" id="contact">
       <h2 data-aos="fade-up" data-aos-delay="150"
-       data-aos-offset="700">Countac Us</h2>
+       >Countac Us</h2>
       <form action="POST"  data-netlify="true">
-        <input type="text" name="name" placeholder="Your Name" required data-aos="fade-up" data-aos-delay="300"  data-aos-offset="700">
-        <input type="email" name="email" id="" placeholder="Your Email" data-aos="fade-up" data-aos-delay="450"  data-aos-offset="700">
-        <input type="tel" name="tel" id="" placeholder="Your Phone" required data-aos="fade-up" data-aos-delay="600"  data-aos-offset="700">
-        <textarea placeholder="Your Message" name="message" id="" cols="30" rows="10" data-aos="fade-up" data-aos-delay="750"  data-aos-offset="700"></textarea>
-        <button class="btn" type="submit" data-aos="fade-up" data-aos-delay="1000"  data-aos-offset="700">Send message</button>
+        <input type="text" name="name" placeholder="Your Name" required data-aos="fade-up" data-aos-delay="300"  >
+        <input type="email" name="email" id="" placeholder="Your Email" data-aos="fade-up" data-aos-delay="450"  >
+        <input type="tel" name="tel" id="" placeholder="Your Phone" required data-aos="fade-up"  d>
+        <textarea placeholder="Your Message" name="message" id="" cols="30" rows="10" data-aos="fade-up"   d></textarea>
+        <button class="btn" type="submit" data-aos="fade-up" data-aos-delay="1000" >Send message</button>
       </form>
     </section>
     <footer id="footer" class="footer">
       <div class="footer-container">
         <div class="box"data-aos="fade-up" data-aos-delay="1000"
-         data-aos-offset="700" >
+          >
           <h3>quick links</h3>
           <nav class="navbar">
             <ul>
@@ -502,7 +502,7 @@
           </nav>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="1200"
-         data-aos-offset="700">
+         >
           <h3>extra links</h3>
           <a class="link" href="#"> <i class="fas fa-angle-right"></i> my order </a>
           <a class="link" href="#"> <i class="fas fa-angle-right"></i> my wishlist </a>
@@ -511,7 +511,7 @@
           <a class="link" href="#"> <i class="fas fa-angle-right"></i> privacy policy </a>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="1400"
-         data-aos-offset="700">
+         >
           <h3>contact info</h3>
           <a class="link" href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
           <a class="link" href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
@@ -520,7 +520,7 @@
           <a class="link" href="#"> <i class="fas fa-map"></i> Vlasotince, srbija </a>
         </div>
         <div class="box" data-aos="fade-up" data-aos-delay="1600"
-         data-aos-offset="700">
+         >
           <h3>newsletter</h3>
           <input type="email" placeholder="Your Mail">
           <button class="btn" type="submit">subscribe</button>
